feat: created component file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header">
 
         <img class="profile" src="neha.jpeg">
-        <div class="site-content">
+        <div>
             <h1>
                 Hi, I'm Neha Gupta. I am 22 years old, living in Delhi.
             </h1>
