feat: added nav bar

--- a/index.html
+++ b/index.html
@@ -7,18 +7,33 @@
 </head>
 
 <body>
+    <nav class="navigation">
+        <div class="container-fluid">
+            <div class="brand-name">Neha Gupta</div>
+            <ul class="no-bullet -inline">
+                <li>
+                    <a href="/" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="/">About</a>
+                </li>
+                <li>
+                    <a href="/components/component.html">Blogs</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <header class="site-header">
-
         <img class="profile" src="neha.jpeg">
         <div>
             <h1>
-                Hi, I'm Neha Gupta. I am 22 years old, living in Delhi.
+                Hi, I'm <span class="colored-text">Neha Gupta</span>. I am <span class="colored-text">22</span> years old, living in <span class="colored-text">Delhi</span>.
             </h1>
             <h3>
                 I am learning full stack development for now.
             </h3>
             <h5>
-                connect w/ me @<a class="course-link" href="https://nayyyhaa.github.io/">nayyhaa land</a>
+                connect w/ me @<a class="colored-text" href="https://nayyyhaa.github.io/">nayyhaa land</a>
             </h5>
         </div>
 
