add: added footer

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             </ul>
         </div>
     </nav>
-    <header class="site-header">
-        <img class="profile" src="neha.jpeg">
-        <div>
+        <header class="site-header">
+            <img class="profile" src="neha.jpeg">
             <h1>
                 Hi, I'm <span class="colored-text">Neha Gupta</span>. I am <span class="colored-text">22</span> years old, living in <span class="colored-text">Delhi</span>.
             </h1>
@@ -35,9 +34,23 @@
             <h5>
                 connect w/ me @<a class="colored-text" href="https://nayyyhaa.github.io/">nayyhaa land</a>
             </h5>
-        </div>
-
-    </header>
+        </header>
+        <footer class="footer">
+            <div class="container">connect with me on socials
+                <ul class="no-bullet -inline">
+                    <li>
+                        <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/nayyyhaa">@github</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/nayyyhaa">@twitter</a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+   
 </body>
 
 </html>
