--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
             </ul>
         </div>
     </nav>
+    <div class="container-homepage">
         <header class="site-header">
             <img class="profile" src="assets/neha.jpeg">
             <h1>
-                Hi, I'm <span class="colored-text">Neha Gupta</span>. I am <span class="colored-text">22</span> years old, living in <span class="colored-text">Delhi</span>.
+                Hi All, I'm <span class="colored-text">Neha Gupta</span>. 👋
             </h1>
             <h3>
-                I am learning full stack development for now.
+                A passionate full stack developer from <span class="colored-text">Delhi, India</span>.
             </h3>
-            <h5>
-                connect w/ me @<a class="colored-text" href="https://nayyyhaa.github.io/">nayyhaa land</a>
-            </h5>
+            <h3>
+                I build Web applications with <strong>JavaScript | Angular | Node.js | React.js</strong> and other cool libraries and frameworks.
+            </h3>
         </header>
 
         <section class="section -ow">
@@ -58,22 +59,22 @@
             <p>I like to write technical and non technical blogs. </p>
             <a href="/components/blogs/blogs.html" class="primary-link">Check blogs</a>
         </section>
-        <footer class="footer">
-            <div>connect with me on socials
-                <ul class="no-bullet -inline">
-                    <li>
-                        <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/nayyyhaa">@github</a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/nayyyhaa">@twitter</a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
-   
+    </div>
+    <footer class="footer">
+        <div>connect with me on socials
+            <ul class="no-bullet -inline">
+                <li>
+                    <a href="https://www.linkedin.com/in/nayyyhaa/">@linkedin</a>
+                </li>
+                <li>
+                    <a href="https://github.com/nayyyhaa">@github</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/nayyyhaa">@twitter</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
