feat: web crawler tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Neha Gupta</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="description" content="Neha is a Full Stack Web Developer from Delhi, India.">
+    <meta charset="UTF-8">
+    <meta name="robots" content="index,follow">
     <link href="css/main.css" rel="stylesheet">
     <link href="assets/favicon.ico" rel="icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
