--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <div class="container-homepage">
         <header class="site-header">
-            <img class="profile" src="assets/neha.jpeg">
+            <img src="../../assets/sun.svg" alt="sun">
             <h1>
                 Hi All, I'm <span class="colored-text">Neha Gupta</span>. 👋
             </h1>
