fix: img responsiveness

--- a/index.html
+++ b/index.html
@@ -44,16 +44,18 @@
     </nav>
     <div class="container-homepage">
         <header class="site-header">
+            <div class="introduction">
+                <h1>
+                    Hi All, I'm <span class="colored-text">Neha Gupta</span>. 👋
+                </h1>
+                <h3>
+                    A passionate full stack developer from <span class="colored-text">Delhi, India</span>.
+                </h3>
+                <h3>
+                    I build Web applications with <strong>JavaScript | Angular | Node.js | React.js</strong> and other cool libraries and frameworks.
+                </h3>
+            </div>
             <img src="../../assets/sun.svg" alt="sun">
-            <h1>
-                Hi All, I'm <span class="colored-text">Neha Gupta</span>. 👋
-            </h1>
-            <h3>
-                A passionate full stack developer from <span class="colored-text">Delhi, India</span>.
-            </h3>
-            <h3>
-                I build Web applications with <strong>JavaScript | Angular | Node.js | React.js</strong> and other cool libraries and frameworks.
-            </h3>
         </header>
 
         <section class="section -ow">
