style: intro text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <header class="site-header">
             <div class="introduction">
                 <h1>
-                    Hi All, I'm <span class="colored-text bg">Neha Gupta.</span> 👋
+                    Hi All, I'm <span class="colored-text bg">Neha Gupta.</span> 
                 </h1>
                 <h3>
                     A passionate full stack developer from <span class="colored-text">Delhi, India</span>.
