--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                     <a href="/" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="/components/about/about.html">About</a>
+                    <a href="/components/about/">About</a>
                 </li>
                 <li>
-                    <a href="/components/projects/projects.html">Projects</a>
+                    <a href="/components/projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="/components/blogs/blogs.html">Blogs</a>
+                    <a href="/components/blogs/">Blogs</a>
                 </li>
             </ul>
         </div>
