--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <section class="section">
             <h2>Projects</h2>
             <p>checkout my creations!</p>
-            <a href="/components/projects/projects.html" class="secondary-link">Check projects</a>
+            <a href="/components/projects/" class="secondary-link">Check projects</a>
         </section>
 
         <section class="section -ow">
             <h2>Blogs</h2>
             <p>I like to write technical and non technical blogs. </p>
-            <a href="/components/blogs/blogs.html" class="primary-link">Check blogs</a>
+            <a href="/components/blogs/" class="primary-link">Check blogs</a>
         </section>
     </div>
     <footer class="footer" id="connect">
