refactor: removed blog section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
         <section class="section -ow">
             <h2>Blogs</h2>
-            <p>I like to write technical and non technical blogs. </p>
-            <a href="/components/blogs/" class="primary-link">Check blogs</a>
+            <p>I like to document my learning. Checkout few blogs that I've written.</p>
+            <a href="/components/blogs/" class="primary-link">Read blogs</a>
         </section>
     </div>
     <footer class="footer" id="connect">
